terraform/cross-account-network/vpc_peering.tf
# Requester's side of the connection.
resource "aws_vpc_peering_connection" "peer" {
  provider = "aws.src"

  vpc_id        = "${var.master_vpc_id}"
  peer_vpc_id   = "${aws_vpc.network.id}"
  peer_owner_id = "${data.aws_caller_identity.peer.account_id}"
  auto_accept   = false

  tags = {
    Side = "Requester"
  }
}

# Accepter's side of the connection.
resource "aws_vpc_peering_connection_accepter" "peer" {
  provider = "aws.dst"

  vpc_peering_connection_id = "${aws_vpc_peering_connection.peer.id}"
  auto_accept               = true

  tags = {
    Side = "Accepter"
  }
}

resource "aws_vpc_peering_connection_options" "requester" {
  provider   = "aws.src"
  depends_on = ["aws_vpc_peering_connection_accepter.peer"]

  # As options can't be set until the connection has been accepted
  # create an explicit dependency on the accepter.
  vpc_peering_connection_id = "${aws_vpc_peering_connection_accepter.peer.id}"

  requester {
    allow_remote_vpc_dns_resolution = true
  }
}

resource "aws_vpc_peering_connection_options" "accepter" {
  provider                  = "aws.dst"
  depends_on                = ["aws_vpc_peering_connection_accepter.peer"]
  vpc_peering_connection_id = "${aws_vpc_peering_connection_accepter.peer.id}"

  accepter {
    allow_remote_vpc_dns_resolution = true
  }
}
